--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -4,23 +4,26 @@
     android:layout_height="match_parent"
     android:padding="@dimen/widget_margin">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:orientation="horizontal">
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="1.5"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/appwidget_image1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="center"
+                android:layout_weight="2"
                 android:background="@drawable/widget_imageview_background"
                 android:src="@mipmap/ic_launcher"
 
@@ -29,8 +32,9 @@
             <ImageView
                 android:id="@+id/appwidget_image2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:background="@drawable/widget_imageview_background"
                 android:src="@mipmap/ic_launcher" />
 
@@ -41,28 +45,112 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="3.5"
             android:orientation="horizontal"
 
             >
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:text="b1" />
 
-            <ImageView
-                android:id="@+id/appwidget_image3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/widget_imageview_background"
-                android:src="@mipmap/ic_launcher" />
 
-            <ImageView
-                android:id="@+id/appwidget_image4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/widget_imageview_background"
-                android:src="@mipmap/ic_launcher" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="39"
+                android:orientation="vertical">
 
+
+                <TextView
+                    android:id="@+id/appwidget_text1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="16.25"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:text="▲" />
+
+
+                <ImageView
+                    android:id="@+id/appwidget_image3"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="27.5"
+                    android:background="@drawable/widget_imageview_background"
+                    android:src="@mipmap/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/appwidget_text2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="16.25"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:text="▼" />
+
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:text="b2" />
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="39"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/appwidget_text3"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="16.25"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:text="▲" />
+
+
+                <ImageView
+                    android:id="@+id/appwidget_image4"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="27.5"
+                    android:background="@drawable/widget_imageview_background"
+                    android:src="@mipmap/ic_launcher" />
+
+
+                <TextView
+                    android:id="@+id/appwidget_text4"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="16.25"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:text="▼" />
+
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="24"
+                android:text="b3" />
 
         </LinearLayout>
 
